Up to defining fslBET node

--- a/Normalization.ipynb
+++ b/Normalization.ipynb
@@ -32550,15 +32550,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpimg\n",
     "import nipype.interfaces.fsl as fsl # importing FSL interface functions\n",
     "from nipype import Node, Workflow  # components to construct workflow\n",
     "from nipype.interfaces.io import DataSink  # datasink\n",
-    "from bids.grabbids import BIDSLayout  # BIDSLayout object to specify file(s)\n",
+    "from bids.layout import BIDSLayout  # BIDSLayout object to specify file(s)\n",
     "\n",
     "\n",
     "# Directory where your data set resides.\n",
@@ -32595,7 +32597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32613,9 +32615,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TraitError",
+     "evalue": "The trait 'reference' of a FLIRTInputSpec instance is an existing file name, but the path  '/usr/local/fsl/data/standard/MNI152_T1_2mm_brain.nii.gz' does not exist.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTraitError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-6d70c2f692e4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Linear normalization node\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m fslFLIRT = Node(fsl.FLIRT(reference=fMNI,\n\u001b[0;32m----> 3\u001b[0;31m                           cost_func='normmi'),\n\u001b[0m\u001b[1;32m      4\u001b[0m                 name=\"fslFLIRT\")\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.5/dist-packages/nipype/interfaces/fsl/base.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, **inputs)\u001b[0m\n\u001b[1;32m    170\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    171\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 172\u001b[0;31m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mFSLCommand\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    173\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mon_trait_change\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_output_update\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'output_type'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    174\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.5/dist-packages/nipype/interfaces/base/core.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, command, terminal_output, **inputs)\u001b[0m\n\u001b[1;32m    643\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    644\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcommand\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mterminal_output\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 645\u001b[0;31m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mCommandLine\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    646\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_environ\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    647\u001b[0m         \u001b[0;31m# Set command. Input argument takes precedence\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.5/dist-packages/nipype/interfaces/base/core.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, from_file, resource_monitor, ignore_exception, **inputs)\u001b[0m\n\u001b[1;32m    173\u001b[0m                 'No input_spec in class: %s' % self.__class__.__name__)\n\u001b[1;32m    174\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 175\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minput_spec\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    176\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mignore_exception\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mignore_exception\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    177\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.5/dist-packages/nipype/interfaces/base/specs.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m     65\u001b[0m         \u001b[0;31m# therefore these args were being ignored.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m         \u001b[0;31m# super(TraitedSpec, self).__init__(*args, **kwargs)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 67\u001b[0;31m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mBaseTraitedSpec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     68\u001b[0m         \u001b[0mtraits\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpush_exception_handler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreraise_exceptions\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m         \u001b[0mundefined_traits\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.5/dist-packages/nipype/interfaces/base/traits_extension.py\u001b[0m in \u001b[0;36mvalidate\u001b[0;34m(self, object, name, value)\u001b[0m\n\u001b[1;32m    110\u001b[0m                 \u001b[0margs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'The trait \\'{}\\' of {} instance is {}, but the path '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    111\u001b[0m                 ' \\'{}\\' does not exist.'.format(name, class_of(object),\n\u001b[0;32m--> 112\u001b[0;31m                                                  self.info_text, value))\n\u001b[0m\u001b[1;32m    113\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    114\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merror\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTraitError\u001b[0m: The trait 'reference' of a FLIRTInputSpec instance is an existing file name, but the path  '/usr/local/fsl/data/standard/MNI152_T1_2mm_brain.nii.gz' does not exist."
+     ]
+    }
+   ],
    "source": [
     "# Linear normalization node\n",
     "fslFLIRT = Node(fsl.FLIRT(reference=fMNI,\n",
@@ -32633,7 +32652,25 @@
    "source": [
     "For the linear normalization process, I use **`fsl.FLIRT`**. For the non-linear normalization process, I use **`fsl.FNIRT`**. I name them `fslFLIRT` and `fslFNIRT`, respectively. Both processes require **`reference`**, the template image, as the input parameter. In addition, for `fslFLIRT`, I specify the cost function **`cost_func`** parameter as **`'normmi'`** or normalized mutual information.\n",
     "\n",
-    "Now all the nodes are defined, so I combine them as a workflow and *connect* them in the order of the normalization process. First, I define a workflow object **`Workflow`** available in **`nipype`**. "
+    "And we create a datasink node to collect output."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DataSink to collect intermediate outputs\n",
+    "datasink = Node(DataSink(base_directory=outDir),\n",
+    "                name='datasink')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now all the nodes are defined. Let's create a workflow."
    ]
   },
   {
@@ -32643,14 +32680,14 @@
    "outputs": [],
    "source": [
     "# Creating a workflow object\n",
-    "wf = Workflow(name=\"fslNorm\", base_dir=outDir)"
+    "wfNormT1 = Workflow(name=\"wfNormT1\", base_dir=outDir)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, a workflow object **`wf`** is created. I give it a name **`fslNorm`**. This will be the directory name under the parameter **`base_dir`** where all the outputs are written to. Now I add nodes to this workflow by connecting inputs/outputs from nodes by the **`connect`** method for the workflow object `wf`."
+    "And connect nodes."
    ]
   },
   {
@@ -32660,176 +32697,22 @@
    "outputs": [],
    "source": [
     "# connecting nodes as a workflow\n",
-    "wf.connect(fslBET, \"out_file\", fslFLIRT, \"in_file\")"
+    "wfNormT1.connect(fslBET, \"out_file\", fslFLIRT, \"in_file\")\n",
+    "wfNormT1.connect(fslBET, 'out_file', fslFNIRT,'in_file')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, nodes `fslBET` and `fslFLIRT` are connected. The output from `fslBET`, **`out_file`**, is used as the input to `fslFLIRT`, **`in_file`**. The names of these inputs / outputs are defined in `nipype`. The best way to find out is by examining the help document for the corresponding processes. For example,"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wraps command **bet**\n",
-      "\n",
-      "FSL BET wrapper for skull stripping\n",
-      "\n",
-      "For complete details, see the `BET Documentation.\n",
-      "<https://fsl.fmrib.ox.ac.uk/fsl/fslwiki/BET/UserGuide>`_\n",
-      "\n",
-      "Examples\n",
-      "--------\n",
-      ">>> from nipype.interfaces import fsl\n",
-      ">>> btr = fsl.BET()\n",
-      ">>> btr.inputs.in_file = 'structural.nii'\n",
-      ">>> btr.inputs.frac = 0.7\n",
-      ">>> btr.inputs.out_file = 'brain_anat.nii'\n",
-      ">>> btr.cmdline\n",
-      "'bet structural.nii brain_anat.nii -f 0.70'\n",
-      ">>> res = btr.run() # doctest: +SKIP\n",
-      "\n",
-      "Inputs::\n",
-      "\n",
-      "\t[Mandatory]\n",
-      "\tin_file: (an existing file name)\n",
-      "\t\tinput file to skull strip\n",
-      "\t\tflag: %s, position: 0\n",
-      "\n",
-      "\t[Optional]\n",
-      "\targs: (a unicode string)\n",
-      "\t\tAdditional parameters to the command\n",
-      "\t\tflag: %s\n",
-      "\tcenter: (a list of at most 3 items which are an integer (int or\n",
-      "\t\t long))\n",
-      "\t\tcenter of gravity in voxels\n",
-      "\t\tflag: -c %s\n",
-      "\tenviron: (a dictionary with keys which are a bytes or None or a value\n",
-      "\t\t of class 'str' and with values which are a bytes or None or a value\n",
-      "\t\t of class 'str', nipype default value: {})\n",
-      "\t\tEnvironment variables\n",
-      "\tfrac: (a float)\n",
-      "\t\tfractional intensity threshold\n",
-      "\t\tflag: -f %.2f\n",
-      "\tfunctional: (a boolean)\n",
-      "\t\tapply to 4D fMRI data\n",
-      "\t\tflag: -F\n",
-      "\t\tmutually_exclusive: functional, reduce_bias, robust, padding,\n",
-      "\t\t remove_eyes, surfaces, t2_guided\n",
-      "\tmask: (a boolean)\n",
-      "\t\tcreate binary mask image\n",
-      "\t\tflag: -m\n",
-      "\tmesh: (a boolean)\n",
-      "\t\tgenerate a vtk mesh brain surface\n",
-      "\t\tflag: -e\n",
-      "\tno_output: (a boolean)\n",
-      "\t\tDon't generate segmented output\n",
-      "\t\tflag: -n\n",
-      "\tout_file: (a file name)\n",
-      "\t\tname of output skull stripped image\n",
-      "\t\tflag: %s, position: 1\n",
-      "\toutline: (a boolean)\n",
-      "\t\tcreate surface outline image\n",
-      "\t\tflag: -o\n",
-      "\toutput_type: ('NIFTI' or 'NIFTI_PAIR' or 'NIFTI_GZ' or\n",
-      "\t\t 'NIFTI_PAIR_GZ')\n",
-      "\t\tFSL output type\n",
-      "\tpadding: (a boolean)\n",
-      "\t\timprove BET if FOV is very small in Z (by temporarily padding end\n",
-      "\t\tslices)\n",
-      "\t\tflag: -Z\n",
-      "\t\tmutually_exclusive: functional, reduce_bias, robust, padding,\n",
-      "\t\t remove_eyes, surfaces, t2_guided\n",
-      "\tradius: (an integer (int or long))\n",
-      "\t\thead radius\n",
-      "\t\tflag: -r %d\n",
-      "\treduce_bias: (a boolean)\n",
-      "\t\tbias field and neck cleanup\n",
-      "\t\tflag: -B\n",
-      "\t\tmutually_exclusive: functional, reduce_bias, robust, padding,\n",
-      "\t\t remove_eyes, surfaces, t2_guided\n",
-      "\tremove_eyes: (a boolean)\n",
-      "\t\teye & optic nerve cleanup (can be useful in SIENA)\n",
-      "\t\tflag: -S\n",
-      "\t\tmutually_exclusive: functional, reduce_bias, robust, padding,\n",
-      "\t\t remove_eyes, surfaces, t2_guided\n",
-      "\trobust: (a boolean)\n",
-      "\t\trobust brain centre estimation (iterates BET several times)\n",
-      "\t\tflag: -R\n",
-      "\t\tmutually_exclusive: functional, reduce_bias, robust, padding,\n",
-      "\t\t remove_eyes, surfaces, t2_guided\n",
-      "\tskull: (a boolean)\n",
-      "\t\tcreate skull image\n",
-      "\t\tflag: -s\n",
-      "\tsurfaces: (a boolean)\n",
-      "\t\trun bet2 and then betsurf to get additional skull and scalp surfaces\n",
-      "\t\t(includes registrations)\n",
-      "\t\tflag: -A\n",
-      "\t\tmutually_exclusive: functional, reduce_bias, robust, padding,\n",
-      "\t\t remove_eyes, surfaces, t2_guided\n",
-      "\tt2_guided: (a file name)\n",
-      "\t\tas with creating surfaces, when also feeding in non-brain-extracted\n",
-      "\t\tT2 (includes registrations)\n",
-      "\t\tflag: -A2 %s\n",
-      "\t\tmutually_exclusive: functional, reduce_bias, robust, padding,\n",
-      "\t\t remove_eyes, surfaces, t2_guided\n",
-      "\tthreshold: (a boolean)\n",
-      "\t\tapply thresholding to segmented brain image and mask\n",
-      "\t\tflag: -t\n",
-      "\tvertical_gradient: (a float)\n",
-      "\t\tvertical gradient in fractional intensity threshold (-1, 1)\n",
-      "\t\tflag: -g %.2f\n",
-      "\n",
-      "Outputs::\n",
-      "\n",
-      "\tinskull_mask_file: (a file name)\n",
-      "\t\tpath/name of inskull mask (if generated)\n",
-      "\tinskull_mesh_file: (a file name)\n",
-      "\t\tpath/name of inskull mesh outline (if generated)\n",
-      "\tmask_file: (a file name)\n",
-      "\t\tpath/name of binary brain mask (if generated)\n",
-      "\tmeshfile: (a file name)\n",
-      "\t\tpath/name of vtk mesh file (if generated)\n",
-      "\tout_file: (a file name)\n",
-      "\t\tpath/name of skullstripped file (if generated)\n",
-      "\toutline_file: (a file name)\n",
-      "\t\tpath/name of outline file (if generated)\n",
-      "\toutskin_mask_file: (a file name)\n",
-      "\t\tpath/name of outskin mask (if generated)\n",
-      "\toutskin_mesh_file: (a file name)\n",
-      "\t\tpath/name of outskin mesh outline (if generated)\n",
-      "\toutskull_mask_file: (a file name)\n",
-      "\t\tpath/name of outskull mask (if generated)\n",
-      "\toutskull_mesh_file: (a file name)\n",
-      "\t\tpath/name of outskull mesh outline (if generated)\n",
-      "\tskull_mask_file: (a file name)\n",
-      "\t\tpath/name of skull mask (if generated)\n",
-      "\n",
-      "References::\n",
-      "None\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "fsl.BET.help()"
+    "Here, `fslBET` is connected to `fslFLIRT` and `fslFNIRT`. The output from `fslBET`, **`out_file`**, is used as the input to `fslFLIRT` and `fslFNIRT`, **`in_file`**. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "shows a list of inputs and outputs for `fsl.BET`. \n",
-    "\n",
-    "The `.connect` method for a work flow in the above notation is useful if two nodes are connected, and a single output is passed on as a single input. If inputs from multiple nodes are required, or multiple outputs have to be passed on, then then following notation of `connect` method is more useful."
+    "We also pass on the linear normalization matrix `out_matrix_file` as the input parameter `affile_file` in the `fslFNIRT` node."
    ]
   },
   {
@@ -32838,19 +32721,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wf.connect([(fslBET, fslFNIRT, [('out_file', 'in_file')]),\n",
-    "            (fslFLIRT,fslFNIRT, [('out_matrix_file', 'affine_file')])])"
+    "wfNormT1.connect(fslFLIRT, 'out_matrix_file', fslFNIRT, 'affine_file')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we have:\n",
-    "  * `out_file` from `fslBET` is used as `in_file` in `fslFNIRT`\n",
-    "  * `out_matrix_file` from `fslFLIRT` is used as `affine_file` in `fslFNIRT`\n",
-    "  \n",
-    "Now all the workflow is defined. We can visualize the workflow by **`write_graph`** method associated with a workflow object `wf`."
+    "We also collect the output into the datasink. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# adding datasink\n",
+    "wfNormT1.connect(fslFLIRT, 'out_file', datasink, 'NormLinear')\n",
+    "wfNormT1.connect(fslFNIRT, 'warped_file', datasink, 'NormNonLinear')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Linear and non-linear normalized T1 images are written to `NormLinear` and `NormNonLinear` directories, respectively.\n",
+    "\n",
+    "We can now visualize the workflow."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
    ]
   },
   {
@@ -32879,7 +32786,14 @@
    ],
    "source": [
     "# writing out graphs\n",
-    "wf.write_graph(graph2use='orig', dotfilename='graph_orig.dot')"
+    "wfNormT1.write_graph(graph2use='orig', dotfilename='graph_orig_datasink.dot')\n",
+    "\n",
+    "# showing the graph\n",
+    "plt.figure(figsize=[6,6])\n",
+    "img=mpimg.imread(os.path.join(outDir,\"wfNormT1\",\"graph_orig.png\"))\n",
+    "imgplot = plt.imshow(img)\n",
+    "plt.axis('off')\n",
+    "plt.show()\n"
    ]
   },
   {
