T1 normalization workflow ran all the way through

--- a/Normalization.ipynb
+++ b/Normalization.ipynb
@@ -32790,7 +32790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -32819,8 +32819,26 @@
       "\t [Node] Setting-up \"wfNormT1.fslFNIRT\" in \"/tmp/Data/ds102/WorkflowOutput/wfNormT1/fslFNIRT\".\n",
       "190807-20:44:02,971 nipype.workflow INFO:\n",
       "\t [Node] Running \"fslFNIRT\" (\"nipype.interfaces.fsl.preprocess.FNIRT\"), a CommandLine Interface with command:\n",
-      "fnirt --aff=/tmp/Data/ds102/WorkflowOutput/wfNormT1/fslFLIRT/sub-26_T1w_brain_flirt.mat --in=/tmp/Data/ds102/WorkflowOutput/wfNormT1/fslBET/sub-26_T1w_brain.nii.gz --logout=/tmp/Data/ds102/WorkflowOutput/wfNormT1/fslFNIRT/sub-26_T1w_brain_log.txt --ref=/usr/share/fsl/data/standard/MNI152_T1_2mm_brain.nii.gz --iout=/tmp/Data/ds102/WorkflowOutput/wfNormT1/fslFNIRT/sub-26_T1w_brain_warped.nii.gz\n"
+      "fnirt --aff=/tmp/Data/ds102/WorkflowOutput/wfNormT1/fslFLIRT/sub-26_T1w_brain_flirt.mat --in=/tmp/Data/ds102/WorkflowOutput/wfNormT1/fslBET/sub-26_T1w_brain.nii.gz --logout=/tmp/Data/ds102/WorkflowOutput/wfNormT1/fslFNIRT/sub-26_T1w_brain_log.txt --ref=/usr/share/fsl/data/standard/MNI152_T1_2mm_brain.nii.gz --iout=/tmp/Data/ds102/WorkflowOutput/wfNormT1/fslFNIRT/sub-26_T1w_brain_warped.nii.gz\n",
+      "190807-20:47:16,94 nipype.workflow INFO:\n",
+      "\t [Node] Finished \"wfNormT1.fslFNIRT\".\n",
+      "190807-20:47:16,96 nipype.workflow INFO:\n",
+      "\t [Node] Setting-up \"wfNormT1.datasink\" in \"/tmp/Data/ds102/WorkflowOutput/wfNormT1/datasink\".\n",
+      "190807-20:47:16,104 nipype.workflow INFO:\n",
+      "\t [Node] Running \"datasink\" (\"nipype.interfaces.io.DataSink\")\n",
+      "190807-20:47:16,111 nipype.workflow INFO:\n",
+      "\t [Node] Finished \"wfNormT1.datasink\".\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<networkx.classes.digraph.DiGraph at 0x7ff2aba22390>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
