Removed NIfTI & BIDS from the Topics column in course schedule

--- a/Syllabus/Syllabus_fMRI_Fall2019.ipynb
+++ b/Syllabus/Syllabus_fMRI_Fall2019.ipynb
@@ -348,7 +348,7 @@
     "    </tr>\n",
     "    <tr>\n",
     "        <td style=\"text-align:center;\">9/16</td> \n",
-    "        <td style=\"text-align:center;\">More Python, NIfTI and BIDS</td>\n",
+    "        <td style=\"text-align:center;\">More Python</td>\n",
     "        <td style=\"text-align:center;\">Chapter 2.1-2.2</td>\n",
     "        <td style=\"text-align:center;\">Satoru Hayasaka</td>\n",
     "        <td style=\"text-align:center;\">Python (dictionary, data frame, arrays), \n",
