T1 norm workflow (of fMRI normalization) added

--- a/Normalization.ipynb
+++ b/Normalization.ipynb
@@ -33058,6 +33058,132 @@
     "2. **Normalization with less stuff**. Construct another normalization workflow with the `fsl.BET` node with the parameter **`frac=0.8`**, so that less brain tissues (as well as non brain tissues) are included in the skull striped brain. Post the code for the `fslBET` node on Canvas. How does this affect the quality of normalization?\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Normalization of fMRI data\n",
+    "<hr style=\"height:1px;border:none\" />\n",
+    "\n",
+    "Normalization of fMRI data is often performed by applying the T1-to-template normalization parameters (linear & non-linear) to the accompanying fMRI data. This is because fMRI data tend to be blurry and may not produce the optimal normalization outcome as a result. \n",
+    "\n",
+    "In the following script, we see normalization of fMRI to the template. This is done by (1) motion correction and co-registration to T1, (2) normalization of T1 to the template, (3) applying normalization parameters to co-registered fMRI, and (4) post processing. The post processing in this case involves (a) smoothing and (b) masking.\n",
+    "\n",
+    "In this example, we use the **test-retest** data set (a.k.a., **ds114** data set). In particular, we focus on the **finger-foot-lips** task. During this task, subjects were instructed to move their fingers, foot, or lips depending on the picture of body parts (fingers, foot, or lips) they saw on the screen. I randomly chosen subject `09`, session `test`. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[`<NormfMRI.py>`](https://github.com/sathayas/fMRIClassFall2019/blob/master/Norm/NormfMRI.py)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "import nibabel as nib\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpimg\n",
+    "import nipype.interfaces.fsl as fsl # importing FSL interface functions\n",
+    "from nipype import Node, Workflow  # components to construct workflow\n",
+    "from nipype.interfaces.io import DataSink  # datasink\n",
+    "from bids.layout import BIDSLayout  # BIDSLayout object to specify file(s)\n",
+    "from nilearn import image\n",
+    "from nilearn.plotting import plot_anat, view_img\n",
+    "\n",
+    "\n",
+    "# Directory where your data set resides.\n",
+    "dataDir = '/tmp/Data/ds114'\n",
+    "\n",
+    "\n",
+    "# Creating the layout object for this BIDS data set\n",
+    "layout = BIDSLayout(dataDir)\n",
+    "\n",
+    "# an fMRI image from one of the subjects (finger foot lips, test)\n",
+    "imagefMRI = layout.get(subject='09',\n",
+    "                       session='test',\n",
+    "                       suffix='bold',\n",
+    "                       task='fingerfootlips',\n",
+    "                       extension='nii.gz',\n",
+    "                       return_type='file')[0]\n",
+    "\n",
+    "# an T1 image for the same subject (test)\n",
+    "imageT1 = layout.get(subject='09',\n",
+    "                     session='test',\n",
+    "                     suffix='T1w',\n",
+    "                     extension='nii.gz',\n",
+    "                     return_type='file')[0]\n",
+    "\n",
+    "\n",
+    "# template image (from FSL)\n",
+    "fMNI = '/usr/share/fsl/data/standard/MNI152_T1_2mm_brain.nii.gz'\n",
+    "\n",
+    "# brain mask in MNI space (from FSL)\n",
+    "fmask = '/usr/share/fsl/data/standard/MNI152_T1_2mm_brain_mask_dil.nii.gz'\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Output directory\n",
+    "outDir = os.path.join(dataDir, 'WorkflowOutput')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Up to here, we imported necessary libraries, and specified data directories and files.\n",
+    "\n",
+    "At this point, we include a workflow for T1 normalization."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\n",
+    "#    T1 Normalization workflow\n",
+    "#\n",
+    "# Skullstrip process node\n",
+    "fslBET = Node(fsl.BET(in_file=imageT1),\n",
+    "              name=\"fslBET\")\n",
+    "\n",
+    "\n",
+    "# Linear normalization node\n",
+    "fslFLIRT = Node(fsl.FLIRT(reference=fMNI,\n",
+    "                          cost_func='normmi'),\n",
+    "                name=\"fslFLIRT\")\n",
+    "\n",
+    "# Non-linear normalization node\n",
+    "fslFNIRT = Node(fsl.FNIRT(ref_file=fMNI,\n",
+    "                          fieldcoeff_file=True),\n",
+    "                name='fslFNIRT')\n",
+    "\n",
+    "# Creating a workflow object\n",
+    "normT1wf = Workflow(name=\"fslNorm_T1\", base_dir=outDir)\n",
+    "\n",
+    "# connecting nodes as a T1 normalization workflow\n",
+    "normT1wf.connect(fslBET, \"out_file\", fslFLIRT, \"in_file\")\n",
+    "normT1wf.connect(fslBET, 'out_file', fslFNIRT, 'in_file')\n",
+    "normT1wf.connect(fslFLIRT, 'out_matrix_file', fslFNIRT, 'affine_file')"
+   ]
   }
  ],
  "metadata": {
