Added fMRIPrep as an optional resource

--- a/Syllabus/Syllabus_fMRI_Fall2019.ipynb
+++ b/Syllabus/Syllabus_fMRI_Fall2019.ipynb
@@ -143,7 +143,10 @@
     "\n",
     "### Software\n",
     "\n",
-    "***Git***: Git enables you to clone (or copy) codes, notes, and some data associated with this class from GitHub. Git is already pre-installed on Mac. For Windows users, you can download Git for free from its website (https://git-scm.com/downloads). The use of Git is explained in a separate documentation."
+    "***Git***: Git enables you to clone (or copy) codes, notes, and some data associated with this class from GitHub. Git is already pre-installed on Mac. For Windows users, you can download Git for free from its website (https://git-scm.com/downloads). The use of Git is explained in a separate documentation.\n",
+    "\n",
+    "\n",
+    "***fMRIPrep***: fMRIPrep is a tool for fMRI data pre-processing. It is available as a Docker image **`poldracklab/fmriprep`** from the Docker Hub web site. Although we will cover fMRIPrep as part of this course, it is rather computationally intensive so you do not have to have this tool."
    ]
   },
   {
