fMRIPrep is an optional software tool now

--- a/Intro.ipynb
+++ b/Intro.ipynb
@@ -106,10 +106,8 @@
     "  * Docker images called **`sathayas/python-fsl-bundle`** (~3GB) is available from the Docker Hub web site. \n",
     "  * It includes Python 3 (and all necessary libraries), FSL (brain image analysis software tool), FSLEyes and MRICron (both are image viewer software tools).\n",
     "\n",
-    "* **fMRIPrep**:\n",
-    "  * Pipeline scripting tool for fMRI data preprocessing. \n",
     "\n",
-    "***Installation instructions on Docker and Docker image (`python-fsl-bundle`) will be covered during the first class. Installation instructions on fMRIPrep will be covered later in the semester.***\n",
+    "***Installation instructions on Docker and Docker image (`python-fsl-bundle`) will be covered during the first class.***\n",
     "\n",
     " "
    ]
@@ -135,7 +133,11 @@
     "* Git is already pre-installed on Mac. \n",
     "* For Windows users, you can download from its website (https://git-scm.com/downloads). \n",
     "\n",
-    "***Use of Git (and GitHub) is explained in a separate document***"
+    "  ***Use of Git (and GitHub) is explained in a separate document***\n",
+    "\n",
+    "***fMRIPrep***: A preprocessing tool for fMRI data\n",
+    "* Available from Docker Hub as **`poldracklab/fmriprep`** (~6GB)\n",
+    "* Computationally intensive, so you do not have to install it."
    ]
   },
   {
