--- a/Syllabus/Syllabus_fMRI_Fall2019.ipynb
+++ b/Syllabus/Syllabus_fMRI_Fall2019.ipynb
@@ -121,9 +121,8 @@
     "  * **`sathayas/python-fsl-bundle`** (~3GB): Available from the Docker Hub web site. This Docker image includes Python 3, FSL (neuroimage data analysis tool), and Python libraries necessary for scientific computing, neuroimage data processing, and machine learning.\n",
     "\n",
     "    * *Installation instructions on Docker and Docker image will be covered during the first class.*\n",
-    "    * *Students are expected to install all the necessary packages on their computer, should they elect to use their own computer.* ***The instructor is unable to answer any questions or issues related to software installation during the class.*** *If you need any assistance regarding software installation or issues, consult with the instructor during office hours.\n",
-    "    \n",
-    "  * **fMRIPrep**: A pipeline tool for fMRI data preprocessing. To ease installation, we will use a Docker image for fMRIPrep. Installation instructions will be covered during the class on fMRIPrep."
+    "    * *Students are expected to install all the necessary packages on their computer, should they elect to use their own computer.* ***The instructor is unable to answer any questions or issues related to software installation during the class.*** *If you need any assistance regarding software installation or issues, consult with the instructor during office hours.*\n",
+    "    "
    ]
   },
   {
@@ -146,7 +145,7 @@
     "***Git***: Git enables you to clone (or copy) codes, notes, and some data associated with this class from GitHub. Git is already pre-installed on Mac. For Windows users, you can download Git for free from its website (https://git-scm.com/downloads). The use of Git is explained in a separate documentation.\n",
     "\n",
     "\n",
-    "***fMRIPrep***: fMRIPrep is a tool for fMRI data pre-processing. It is available as a Docker image **`poldracklab/fmriprep`** from the Docker Hub web site. Although we will cover fMRIPrep as part of this course, it is rather computationally intensive so you do not have to have this tool."
+    "***fMRIPrep***: fMRIPrep is a tool for fMRI data pre-processing. It is available as a Docker image **`poldracklab/fmriprep`** (~6GB) from the Docker Hub web site. Although we will cover fMRIPrep as part of this course, it is rather computationally intensive so you do not have to have this tool."
    ]
   },
   {
