--- a/fMRIPrep.ipynb
+++ b/fMRIPrep.ipynb
@@ -20,11 +20,50 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# What is fMRIPrep?\n",
+    "<hr style=\"height:1px;border:none\" />\n",
+    "\n",
+    "As you saw in the previous class, writing your own script for fMRI data pre-processing is a laborious work. Fortunately, there are a number of pre-processing tools written by others. If you choose to use such a tool, then you just run the tool and your data is pre-processed, ready to be analyzed. \n",
+    "\n",
+    "Your lab may have an fMRI pre-processing script handed down through generations of previous graduate students and post-docs. (I may be wrong, but) Such scripts are often based on a single software tool (probably either SPM or FSL). However, in recent years, it is becoming more common to mix and match different pre-processing steps from multiple software tools. fMRIPrep is a great example of that. \n",
+    "\n",
+    "**fMRIPrep** is a popular tool for fMRI data pre-processing. It combines multiple brain image processing tools to normalize T1-weighted images and fMRI data into the MNI template space. The default pipeline in fMRIPrep consists of FreeSurfer (surface extraction), ANTS (warping), FSL (segmentation), AFNI (physiological noise correction), and a number of other tools. You can pre-process your fMRI data (along with the accompanying T1 images) as long as your data set is organized in the BIDS structure. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Setting up fMRIPrep\n",
+    "<hr style=\"height:1px;border:none\" />\n",
+    "\n",
+    "## fMRIPrep Docker image\n",
+    "## FreeSurfer licence"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Running fMRIPrep\n",
+    "<hr style=\"height:1px;border:none\" />\n",
+    "\n",
+    "## Docker command"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Output from fMRIPrep\n",
+    "<hr style=\"height:1px;border:none\" />\n",
+    "\n",
+    "## Going over the summary\n",
+    "## Resulting files"
+   ]
   }
  ],
  "metadata": {
