Updated the office hours to Monday only

--- a/Syllabus/Syllabus_fMRI_Fall2019.ipynb
+++ b/Syllabus/Syllabus_fMRI_Fall2019.ipynb
@@ -38,7 +38,7 @@
     "  * **Office**: SEA 2.214\n",
     "  * **Email**: hayasaka@utexas.edu\n",
     "  * **Phone**: 512-475-6177\n",
-    "  * **Office hours**: 10:00-11:30am, Mon & Fri - Or by appointment\n",
+    "  * **Office hours**: 10:00am-1:00pm, Mon - Or by appointment\n",
     "\n"
    ]
   },
