Updated the office hours

--- a/Intro.ipynb
+++ b/Intro.ipynb
@@ -39,7 +39,7 @@
     "**Satoru Hayasaka, Ph.D.**\n",
     "* Office: SEA 2.214\n",
     "* Email: hayasaka@utexas.edu\n",
-    "* Office hours: 10:00-11:30am, Mon & Fri - Or by appointment\n",
+    "* Office hours: 10:00am-1:00pm, Mon - Or by appointment\n",
     "\n",
     "## Class\n",
     "* **Day/time**: Mon, 1pm-4pm\n",
