Added RAM to computer requirement; URL for the code repository added

--- a/Intro.ipynb
+++ b/Intro.ipynb
@@ -87,7 +87,7 @@
     "***Computer***: \n",
     "* A computer capable of processing neuroimaging data is required. \n",
     "* Your own computer (laptop or desktop), or iMac in classroom\n",
-    "* I recommend 4GB per CPU core\n",
+    "* I recommend 4GB of RAM per CPU core\n",
     "\n",
     "***Data storage***: \n",
     "* For data & software (Docker images).\n",
@@ -164,7 +164,7 @@
     "\n",
     "### Codes\n",
     "Some example codes used during the class, as well as some sample solutions for in-class\n",
-    "exercises and homework assignments, will be available on GitHub at [URL to be added]. You can clone this repository by\n",
+    "exercises and homework assignments, will be available on GitHub at https://github.com/sathayas/fMRIClassFall2019. You can clone this repository by\n",
     "```\n",
     "git clone https://github.com/sathayas/fMRIClassFall2019.git Codes\n",
     "```\n",
