Reading materials are now listed

--- a/Syllabus/Syllabus_fMRI_Fall2019.ipynb
+++ b/Syllabus/Syllabus_fMRI_Fall2019.ipynb
@@ -376,7 +376,7 @@
     "    <tr>\n",
     "        <td style=\"text-align:center;\">10/7</td> \n",
     "        <td style=\"text-align:center;\">Processing pipeline</td>\n",
-    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">Esteban et al., Nature Methods 2019</td>\n",
     "        <td style=\"text-align:center;\">TBD</td>\n",
     "        <td style=\"text-align:center;\">fMRIPrep</td>\n",
     "        <td style=\"text-align:center;\">HW1 due</td>\n",
@@ -409,8 +409,8 @@
     "        <td style=\"text-align:center;\">11/4</td> \n",
     "        <td style=\"text-align:center;\">Study design</td>\n",
     "        <td style=\"text-align:center;\">Chapter 5.3</td>\n",
-    "        <td style=\"text-align:center;\">TBD</td>\n",
-    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">Satoru Hayasaka</td>\n",
+    "        <td style=\"text-align:center;\">Some statistical exercises</td>\n",
     "        <td style=\"text-align:center;\">HW2 due</td>\n",
     "    </tr>\n",
     "    <tr>\n",
@@ -423,32 +423,32 @@
     "    </tr>\n",
     "    <tr>\n",
     "        <td style=\"text-align:center;\">11/18</td> \n",
-    "        <td style=\"text-align:center;\">Searchlight/ RSA</td>\n",
+    "        <td style=\"text-align:center;\">Multi-voxel pattern analysis (MVPA)</td>\n",
+    "        <td style=\"text-align:center;\">Haxby et al., Science 2001</td>\n",
     "        <td style=\"text-align:center;\">TBD</td>\n",
-    "        <td style=\"text-align:center;\">TBD</td>\n",
-    "        <td style=\"text-align:center;\">Nilearn</td>\n",
+    "        <td style=\"text-align:center;\">Classification with nilearn</td>\n",
     "        <td style=\"text-align:center;\"> </td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "        <td style=\"text-align:center;\">11/25</td> \n",
-    "        <td style=\"text-align:center;\">Cloud computing</td>\n",
+    "        <td style=\"text-align:center;\">Searchlight</td>\n",
+    "        <td style=\"text-align:center;\">Kriegeskorte et al., PNAS 2006</td>\n",
     "        <td style=\"text-align:center;\">TBD</td>\n",
-    "        <td style=\"text-align:center;\">TBD</td>\n",
-    "        <td style=\"text-align:center;\">Brainlife</td>\n",
+    "        <td style=\"text-align:center;\">Searchlight with nilearn</td>\n",
     "        <td style=\"text-align:center;\"></td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "        <td style=\"text-align:center;\">12/2</td> \n",
     "        <td style=\"text-align:center;\">Public data repositories</td>\n",
-    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\"></td>\n",
     "        <td style=\"text-align:center;\">Satoru Hayasaka</td>\n",
     "        <td style=\"text-align:center;\">Final project kick-off</td>\n",
     "        <td style=\"text-align:center;\">HW3 due</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "        <td style=\"text-align:center;\">12/9</td> \n",
-    "        <td style=\"text-align:center;\">Resting-state fMRI</td>\n",
-    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">Cloud computing</td>\n",
+    "        <td style=\"text-align:center;\">Avesani et al., PsyArXiv 2019</td>\n",
     "        <td style=\"text-align:center;\">TBD</td>\n",
     "        <td style=\"text-align:center;\">Final project presentations</td>\n",
     "        <td style=\"text-align:center;\"> </td>\n",
